--- a/src/app/component/application/accion/routed/accion-plist-admin-routed/accion-plist-admin-routed.component.html
+++ b/src/app/component/application/accion/routed/accion-plist-admin-routed/accion-plist-admin-routed.component.html
@@ -15,8 +15,8 @@
         </div>
         <div class="col-md text-start">
           <h5 class="" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
-          <button class="btn btn-outline-danger" *ngIf="id_incidenciaFilter!=0" (click)="setFilterByIncidencia(0)">
-            <i class="bi bi-x-circle"></i> Reset incidencia {{id_incidenciaFilter}} filter</button>
+          <button class="btn btn-danger" *ngIf="id_incidenciaFilter!=0" (click)="setFilterByIncidencia(0)">
+            <i class="bi bi-x-circle"></i> Eliminar filtro de incidencia {{id_incidenciaFilter}}</button>
         </div>
         <div class="col-md text-end">
           <h5 class="">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
