--- a/src/app/component/application/multimedia/routed/multimedia-plist-admin-routed/multimedia-plist-admin-routed.component.html
+++ b/src/app/component/application/multimedia/routed/multimedia-plist-admin-routed/multimedia-plist-admin-routed.component.html
@@ -14,8 +14,8 @@
         </div>
         <div class="col-md text-start">
           <h5 class="" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
-          <button class="btn btn-outline-danger" *ngIf="id_eventoFilter!=0" (click)="setFilterByEvento(0)">
-            <i class="bi bi-x-circle"></i> Reset evento {{id_eventoFilter}} filter</button>
+          <button class="btn btn-danger" *ngIf="id_eventoFilter!=0" (click)="setFilterByEvento(0)">
+            <i class="bi bi-x-circle"></i> Eliminar filtro de evento {{id_eventoFilter}}</button>
         </div>
         <div class="col-md text-end">
           <h5 class="">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
