--- a/src/app/component/application/participacion/routed/participacion-plist-admin-routed/participacion-plist-admin-routed.component.html
+++ b/src/app/component/application/participacion/routed/participacion-plist-admin-routed/participacion-plist-admin-routed.component.html
@@ -14,10 +14,10 @@
         </div>
         <div class="col-md text-start">
           <h5 class="" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
-          <button class="btn btn-outline-danger" *ngIf="id_eventoFilter!=0" (click)="setFilterByEvento(0)">
-            <i class="bi bi-x-circle"></i> Reset Evento {{id_eventoFilter}} filter</button>
-            <button class="btn btn-outline-danger" *ngIf="id_usuarioFilter!=0" (click)="setFilterByUsuario(0)">
-            <i class="bi bi-x-circle"></i> Reset Usuario {{id_usuarioFilter}} filter</button>
+          <button class="btn btn-danger" *ngIf="id_eventoFilter!=0" (click)="setFilterByEvento(0)">
+            <i class="bi bi-x-circle"></i> Eliminar filtro de Evento {{id_eventoFilter}}</button>
+            <button class="btn btn-danger" *ngIf="id_usuarioFilter!=0" (click)="setFilterByUsuario(0)">
+            <i class="bi bi-x-circle"></i> Eliminar filtro de Usuario {{id_usuarioFilter}}</button>
         </div>
         <div class="col-md text-end">
           <h5 class="">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
