--- a/src/app/component/application/usuario/unrouted/usuario-finder-admin-unrouted/usuario-finder-admin-unrouted.component.html
+++ b/src/app/component/application/usuario/unrouted/usuario-finder-admin-unrouted/usuario-finder-admin-unrouted.component.html
@@ -14,8 +14,8 @@
         </div>
         <div class="col-md text-start">
           <h5 class="" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
-          <button class="btn btn-outline-danger" *ngIf="id_tipousuarioFilter!=0" (click)="setFilterByTipousuario(0)">
-            <i class="bi bi-x-circle"></i> Reset tipousuario {{id_tipousuarioFilter}} filter</button>
+          <button class="btn btn-danger" *ngIf="id_tipousuarioFilter!=0" (click)="setFilterByTipousuario(0)">
+            <i class="bi bi-x-circle"></i> Eliminar filtro de tipousuario {{id_tipousuarioFilter}}</button>
         </div>
         <div class="col-md text-end">
           <h5 class="">Total de registros en la consulta {{responseFromServer.totalElements}}</h5>
