--- a/src/app/component/application/incidencia/routed/incidencia-new-admin-routed/incidencia-new-admin-routed.component.html
+++ b/src/app/component/application/incidencia/routed/incidencia-new-admin-routed/incidencia-new-admin-routed.component.html
@@ -33,7 +33,8 @@
           <div class="mb-3 row">
             <label for="fecha" class="col-sm-2 col-form-label">Fecha</label>
             <div class="col-sm-10">
-                <p-calendar formControlName="fecha" dateFormat="yy-mm-dd" dataType="string"></p-calendar>
+                <p-calendar formControlName="fecha" dateFormat="yy-mm-dd" dataType="string" inputId="spanish" [showIcon]="true"
+                    inputId="spanish"></p-calendar>
             </div>
           </div>
 
