--- a/src/app/component/application/usuario/unrouted/user/usuario-detail-user-unrouted/usuario-detail-user-unrouted.component.css
+++ b/src/app/component/application/usuario/unrouted/user/usuario-detail-user-unrouted/usuario-detail-user-unrouted.component.css
@@ -1,5 +1,5 @@
 table.user-profile {
-    width: 40%;
+    width: 25%;
     margin: 50px auto;
     border-collapse: collapse;
     font-family: Arial, sans-serif;
@@ -21,7 +21,7 @@ table.user-profile {
 
   .label {
     font-weight: bold;
-    text-align: right;
+    text-align: left;
     padding-right: 20px;
     font-size: 18px;
     background-color: #09a9d0;
@@ -33,6 +33,7 @@ table.user-profile {
   .data {
     font-size: 18px;
     padding: 10px;
+    font-weight: bold;
     border-bottom: 1px solid lightgray;
   }
 
