cambios a evento y usuario new

--- a/src/app/component/application/evento/routed/evento-view-admin-routed/evento-view-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-view-admin-routed/evento-view-admin-routed.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mb-5">Vista del Accion</h1>
+            <h1 class="text-center mb-5">Vista del Evento</h1>
             <app-evento-detail-admin-unrouted [id]="id"></app-evento-detail-admin-unrouted>
         </div>
         <div class="goback"><button class="goback-btn" routerLink="/admin/evento/plist">Volver atrás</button></div>
